@@ -12,8 +12,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="product" view_ids="purchase.product_view_list_purchase_line"/>
             <label name="supplier"/>
             <field name="supplier"/>
-            <label name="description"/>
-            <field name="description" colspan="3" yexpand="0"/>
             <label name="quantity"/>
             <field name="quantity"/>
             <label name="unit"/>
@@ -22,6 +20,8 @@ this repository contains the full copyright notices and license terms. -->
             <field name="unit_price"/>
             <label name="amount"/>
             <field name="amount"/>
+            <separator name="description" colspan="4"/>
+            <field name="description" colspan="4"/>
         </page>
     </notebook>
 </form>
